# snowpark-widf-lambda-loader-demo

./: .gitignore  Dockerfile  README.md  Taskfile.yml  app.py  env.example  pyproject.toml  requirements.txt  test_app.py
aws/: template.yaml
scripts/: cleanup.sql  lambda-wid.sql  setup.sql
